Twitter/twitter.css
/*
1300px sidebar shrinking
1000px aside disappears
*/

html{
    font-family: Inter,Roobert,Helvetica Neue,Helvetica,Arial,sans-serif;
}

body{
    margin: 0px;
    --header-height: 50px;
    --main-width: 600px;
    --aside-left-width: 300px;
    --aside-right-width: calc(100vw - (var(--aside-left-width) + var(--main-width)));
}

header{
    height: var(--header-height);
    width: calc(100% - var(--aside-left-width));
    position: absolute;
    display: flex;
    left: var(--aside-left-width);
    top: 0px;
    position: sticky;

}

#header-title{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: var(--main-width);
}
#header-title-button{
    height: 40px;
    width: 40px;
}
#header-search{
    border-radius: 10px;
    background-color: gray;
    flex-grow: 1;
    display: flex;
    justify-content: center;
    width: var(--aside-right-width)
}


main{
    position: absolute;
    width: var(--main-width);
    top: var(--header-height);
    left: var(--aside-left-width);
    display: flex;
    flex-direction: column;
}
#main-post-section{
    display:grid;
    grid-template-columns: 60px calc(100% - 140px) 80px ;
    grid-template-rows: 60px 40px 50px;
}   
#main-post-section-avatar{
    height: 60px;
    width: 60px;
    grid-column: 1/2;
    grid-row: 1/2;
}

#main-post-section-input{
    grid-column: 2/4;
    grid-row: 1/2;
}

#main-post-section-input-scope{
    grid-column: 2/4;
    grid-row: 2/3;
}

#main-post-section-icons{
    display: flex;
    grid-column: 2/4;
    grid-row: 3/4;
    gap: 10px;
}

.main-post-section-little-icon{
    height: 30px;
    width: 30px;
}

#main-post-section-button{
    grid-column: 3/4;
    grid-row: 3/4;
}

#main-showtweets-section-div{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
}

.post{
    display: grid;
    grid-template-columns: 60px 1fr;
    grid-template-rows: 30px 30px 350px 30px;
}
.post-icon{
    height: 60px;
    width: 60px;
    grid-column: 1/2;
    grid-row: 1/3;
}

#post-header{
    display: flex;
    grid-column: 2/3;
    grid-row: 1/2;
     justify-content: space-between;
}

#post-header-text{
    display:flex;
    grid-column: 2/3;
    grid-row: 1/2;
}
#post-header-text-user{
    margin: 0px;
    margin-right: 5px;
}

#post-header-text-id{
    margin: 0px;
}
.post-header-threebars{
    height:30px;
    width: 30px;
}

.post-image{
    grid-column: 2/3;
    grid-row: 3/4;
}
#post-buttons{
    display: flex;
    grid-column: 2/3;
    grid-row:  4/5;
}
#aside-left{
    width: var(--aside-left-width);
    height: 100vh;
    border-right:1px gray solid;
    border-right: 1px gray solid;
    top:0px;
    left: 0px;
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#aside-left-options-menu{
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#aside-left-options-menu-entry{
    display: flex;
    align-items: center;
}
#aside-left-options-menu-entry-icon{
    height: 40px;
    width: 40px;
}
#aside-left-options-menu-entry-name{
    margin: 0px;
}

#aside-left-options-menu-button{
    background-color: blue;
    border-radius: 30px;
    display:flex;
    justify-content: center;
}
#aside-left-user{
    display: grid;
    grid-template-columns: 40px calc(100% - 80px) 40px;
    grid-template-rows: 20px 20px;
    margin-left: 40px;
    margin-bottom: 20px;
}

#aside-left-user-icon{
    grid-column: 1/2;
    grid-row: 1/3;
    height: 40px;
    width: 40px;
}

#aside-left-user-bold{
    grid-column: 2/3;
    grid-row: 1/2;
}
#aside-left-user-subtext{       
    grid-column: 2/3;
    grid-row: 2/3;      
    margin: 0px;         
}
#aside-left-user-three-icon{
    height: 20px;
    width: 20px;
    grid-column: 3/4;
    grid-row: 1/3;
    justify-self: center;
    align-self: center;
}


#aside-right{
    width: var(--aside-right-width);
    position: absolute;
    left: calc(var(--aside-left-width) + var(--main-width));
    top: var(--header-height);
    border-left: 1px gray solid;
    display: flex;
    flex-direction: column;
}

.aside-right-container{
    background-color: gray;
    border-radius: 20px;
    display: flex;
    flex-direction: column;

}
#aside-right-container-content{
    display: grid;
    grid-template-columns: calc(100% - 70px) 35px 35px;
    grid-template-rows: 20px 30px 20px;
}

.right-sidebar-undertext{
    margin: 0px;
    font-size: 0.8rem;
    color: lightgray;
    grid-column: 1/2;
    grid-row: 1/2;
}

#aside-right-container-content-title{
    margin: 0px;
    grid-column: 1/2;
    grid-row: 2/4;
}

#aside-right-container-content-square{
    width: 70px;
    height: 70px;
    grid-column: 2/4;
    grid-row: 1/4;
    border-radius: 50%;
}

.right-sidebar-undertext-two{
    color: lightgray;
    margin: 0px;
    grid-column: 1/2; 
    grid-row: 3/4;
    font-size:0.8rem;
}

#right-sidebar-dot-icon{
    grid-row: 1/2;
    grid-column: 3/4;
    height: 20px;
    width: 20px;
}

#aside-right-container-showmore{
    height: 50px;
    display: flex;
    align-items: center;
}

#aside-right-container-user{
display: grid;
grid-template-columns: 40px calc(100% - 140px) 70px;
grid-template-rows: 20px 20px;
}

#aside-right-container-user>img{
    width: 40px;
    height: 40px;
    grid-column: 1/2;
    grid-row: 1/2;
}

#aside-right-container-user>h3{
    margin: 0px;
    grid-column: 2/3;
    grid-row: 1/2;
}
#aside-right-container-user>p{
    margin: 0px;
    grid-column: 2/3;
    grid-row: 2/3;
}
#aside-right-container-user>button{
    grid-column: 3/4;
    grid-row: 1/3;
}

#aside-right-footer{
    display: flex;
    flex-direction: column;
    font-size: 0.8rem;
    color: gray
}

#aside-right-footer-links{
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

